gitlab (4.0.0-3) unstable; urgency=low

  * d/additions/.profile, d/gitlab.install:
    + Add .profile with usefull by git hooks env variables.
  * d/additions/.gitconfig, d/gitlab.install:
    + Add .gitconfig for gitlab user.
  * d/patches/fix-python-path.patch, d/patches/series:
    + Fix incorrect upstream python path.

 -- 

gitlab (4.0.0-2) unstable; urgency=low

  * Fix converting groups to namespaces.
  * Fix resque start.

 -- Alexander Golovko <alexandro@ankalagon.ru>  Tue, 15 Jan 2013 12:11:07 +0400

gitlab (4.0.0-1) unstable; urgency=low

  * New upstream release.
  * Fix error on detecting GL_GITCONFIG_KEYS.

 -- Alexander Golovko <alexandro@ankalagon.ru>  Fri, 11 Jan 2013 15:44:41 +0400

gitlab (3.1.0-1) unstable; urgency=low

  * New upstream release.

 -- Alexander Golovko <alexandro@ankalagon.ru>  Mon, 17 Dec 2012 00:39:13 +0400

gitlab (3.0.1-2) unstable; urgency=low

  * Fix path to documentation (thanks to Michael Moll).
  * Fix $GL_GITCONFIG_KEYS in .gitolite.rc (thanks to Michael Moll).
  * Fix unnecessary documentation compression (thanks to Michael Moll).

 -- Alexander Golovko <alexandro@ankalagon.ru>  Wed, 24 Oct 2012 10:20:53 +0400

gitlab (3.0.1-1) unstable; urgency=low

  * New upstream release.

 -- Alexander Golovko <alexandro@ankalagon.ru>  Wed, 24 Oct 2012 10:20:53 +0400

gitlab (2.9.1-1) unstable; urgency=low

  * New upstream release
  * debian/additions/gitlab.yml:
    + sync config with new upstream version.
  * debian/gitlab.install, debian/gitlab.links:
    + move environments configuration to /etc/gitlab.
  * debian/gitlab.postinst:
    + add stuff for upgrade gitlab from previous version

 -- Alexander Golovko <alexandro@ankalagon.ru>  Wed, 26 Sep 2012 02:09:36 +0400

gitlab (2.8.2-1) unstable; urgency=low

  * Initial release

 -- Alexander Golovko <alexandro@ankalagon.ru>  Wed, 12 Sep 2012 23:46:50 +0400